--- a/apuntes_v1/2_probabilidades.Rmd
+++ b/apuntes_v1/2_probabilidades.Rmd
@@ -71,3 +71,43 @@ Al igual que en el anterior tema, si bien es cierto sabemos los posibles resulta
 
 $$E[X]=\sum_{Rx} x*Pr(X=x)$$
 ## Distribución Binomial
+
+Tiene el objetivo de modelar la cantidad de éxitos en varios experimentos (n) Bernoulli. La forma de la distribución de probabilidades de la Binomial queda como:
+
+$$Pr(X=x)={n \choose x} p^x (1-p)^{n-x}$$
+Donde $p$ representa la probabilidad de éxito y $n$ representa la cantidad de experimentos Bernoullis. Así, la variable aleatoria es $x$ que tiene un recorrido definido por:
+
+$$Rx=\{0,1,2,3,\ldots,n\}$$
+> Problema: Se realizaron 8 pruebas a canes con la finalidad de detectar si tienen rabia o no. Se sabe que la probabilidad de tener rabia en una determinada población de canes es de 3/10. Construya la tabla de probabilidades para la variable aleatoria: Número de canes con rabia.
+
+Solución, se recomienda iniciar identificando la información disponible. $n=8$, $p=\frac{3}{10}$, $Rx=\{0,1,2,3,4,5,6,7,8\}$
+
+$$Pr(X=x)={8 \choose x} 0.3^x 0.7^{8-x}$$
+$$Pr(X=0)={8 \choose 0} 0.3^0 0.7^{8-0}=\frac{8!}{(8-0)!0!}=0.3^0 0.7^{8-0}=$$
+$$=\frac{8!}{8!}1*0.7^8=0.05764801\approx 0.058$$
+$$Pr(X=1)={8 \choose 1} 0.3^1 0.7^{8-1}=0.198$$
+
+$$Pr(X=2)={8 \choose 2} 0.3^2 0.7^{8-2}=0.296$$
+$$Pr(X=3)={8 \choose 3} 0.3^3 0.7^{8-3}=0.254$$
+> Problema: Un examen tiene 6 preguntas de elección múltiple. Cada una de las preguntas tiene 5 opciones, donde solo 1 es la correcta. Un estudiante se propone adivinar las respuestas y marcar de forma aleatoria las preguntas del examen. ¿Cuál es la probabilidad que el estudiante falle en todas las preguntas?, ¿Cuál es la probabilidad que el estudiante responda de forma correcta todas las preguntas?, finalmente; calcular el valor esperado de preguntas correctas. 
+
+Solución, el experimento Bernoulli es marcar la respuesta al azar en una determinada pregunta. $n=6$, $p=\frac{1}{5}$. Así la variable aleatoria lo podemos definir como la cantidad de aciertos en las preguntas.
+
+$$Pr(X=x)={6 \choose x} 0.2^x 0.8^{6-x}$$
+
+$$Pr(X=0)={6 \choose 0} 0.2^0 0.8^{6-0}=1*1*0.8^6=0.2621$$
+
+$$Pr(X=6)={6 \choose 6} 0.2^6 0.8^{6-6}=1*0.2^6*0.8^0=0.000064$$
+Ahora el valor esperado, para esto podemos usar una propiedad de la distribución Binomial que dice:
+
+$$E[X]=\sum_{Rx}xPr(X=x)= n*p$$
+Entonces, para el ejercicio:
+
+$$E[X]=n*p=6*0.2=1.2$$
+## Distribución Normal
+
+
+
+
+
+
